--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,11 @@ dependencies {
     compile files('libs/dropbox-android-sdk-1.6.3.jar')
     compile files('libs/httpmime-4.0.3.jar')
     compile files('libs/json_simple-1.1.jar')
+
+    compile 'com.android.support:appcompat-v7:19.0.0'
+    compile 'com.google.android.gms:play-services:7.3.0'
+    compile 'com.google.api-client:google-api-client:1.20.0'
+    compile 'com.google.api-client:google-api-client-android:1.20.0'
+    compile 'com.google.api-client:google-api-client-gson:1.20.0'
+    compile 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
 }
